--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       </nav>
     </header>
 
-    <!-- Offcanvas -->
+    <!-- Profile API Tab Contents -->
     <div class="offcanvas offcanvas-start" tabindex="-1" id="sidebar">
       <!-- Offcanvas Content -->
       <div class="offcanvas-content">
