--- a/index.html
+++ b/index.html
@@ -358,53 +358,10 @@
       </div>
     </div>
 
-    <!-- Features Section -->
+    <!-- Features Section, populated by JS/constants -->
     <section class="features">
       <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="feature card h-100">
-              <div
-                class="card-body d-flex flex-column align-items-stretch h-100"
-              >
-                <!-- <div class="feature-icon">🎯</div> -->
-                <h2 class="feature-title">Personalized Financial Planning</h2>
-                <img
-                  src="./assets/appointment-advice.jpg"
-                  alt="Feature Image"
-                  class="feature-image"
-                />
-                <p class="feature-description">
-                  Our team of experts takes the time to understand your unique
-                  financial goals and creates personalized investment and wealth
-                  management strategies just for you.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="feature card h-100">
-              <div
-                class="card-body d-flex flex-column align-items-stretch h-100"
-              >
-                <!-- <div class="feature-icon">🔒</div> -->
-                <h2 class="feature-title">
-                  Secure and Diverse Investment Options
-                </h2>
-                <img
-                  src="./assets/register-account.jpg"
-                  alt="Feature Image"
-                  class="feature-image"
-                />
-                <p class="feature-description">
-                  Access a wide range of investment opportunities, from stocks
-                  and bonds to alternative investments, carefully curated to
-                  mitigate risks and maximize returns.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="row"></div>
       </div>
     </section>
 
